cmake_minimum_required(VERSION 3.17)
project(OOP_Y2S5_CLion)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_Y2S5_CLion
        "oop proj y2s5.cpp"
        "oop proj y2s5.exe"
        "owner-book-insert.txt"
        "owner-details.txt"
        "owner-magazine-insert.txt"
        "owner-movie-insert.txt")
